5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1758_2390.log
== TEST (2019-05-28 10:57:23) 
-- CODE:
# Vetor dos presentes
v1 = array(eval(input("Insira o vetor nigga: ")))
# Vetor dos faltantes
v2 = array(eval(input("Insira o vertor nigga: ")))

a = max(v1)
i = 0
mes = 1
while(i != max(v1)):
	mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:57:47) 
-- CODE:
from numpy import *
# Vetor dos presentes
v1 = array(eval(input("Insira o vetor nigga: ")))
# Vetor dos faltantes
v2 = array(eval(input("Insira o vertor nigga: ")))

a = max(v1)
i = 0
mes = 1
while(i != max(v1)):
	mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:59:06) 
-- CODE:
from numpy import *
# Vetor dos presentes
v1 = array(eval(input("Insira o vetor nigga: ")))
# Vetor dos faltantes
v2 = array(eval(input("Insira o vertor nigga: ")))

a = max(v1)
i = 0
mes = 1
while(i != v1[max(v1)]):
	mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:20) 
-- CODE:
from numpy import *
# Vetor dos presentes
v1 = array(eval(input("Insira o vetor nigga: ")))
# Vetor dos faltantes
v2 = array(eval(input("Insira o vertor nigga: ")))

a = max(v1)
i = 0
mes = 1
while(v1[i] != max(v1)):
	mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:00:53) 
-- CODE:
from numpy import *
# Vetor dos presentes
v1 = array(eval(input("Insira o vetor nigga: ")))
# Vetor dos faltantes
v2 = array(eval(input("Insira o vertor nigga: ")))

a = max(v1)
i = 0
mes = 1
while(v1[i] != max(v1)):
	mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.307856
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
